<resources>
    <string name="app_name">IntelliHome</string>
    <string name="item_label">Preferencias Casas</string>
    <string name="subir_foto">Subir Foto</string>
    <string name="nombre">Nombre </string>
    <string name="apellidos">Apellidos </string>
    <string name="correo">Correo </string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña </string>
    <string name="confirmar_contrasena">Confirmar Contraseña </string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento </string>
    <string name="ingresa_tus_hobbies">Ingresa tus hobbies </string>
    <string name="tajertas_de_credito">Tarjetas de Crédito </string>
    <string name="numero_de_cuenta">CR Número de cuenta IBAN</string>
    <string name="valido_hasta">Fecha de Expiración</string>
    <string name="cvc">CVC</string>
    <string name="transporte">Transporte</string>
    <string name="ingresa_tu_dirección">Ingresa tu dirección</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro_Huésped">Registro Huésped</string>
    <string name="registro_Propietario">Registro Propietario</string>
    <string name="Tomar_Foto">Tomar Foto</string>
    <string name="Info_contrasena">1 letra minuscula y 1 mayuscula, 1 dígito, 1 caracter especial, 8 caracteres máximos</string>
    <string name="Mensaje_confirmacion_contras">La contraseña es válida.</string>
    <string name="Mensaje_contras_no_son_iguales">La contraseñas no son iguales.</string>
    <string name="Mensaje_contras_no_cumple_con_los_requsitos">La contraseña no cumple con los requisitos.</string>
    <string name="Mensaje_exito_registro">Registro exisitoso</string>
    <string name="telefono">Teléfono</string>
    <string name="completa_los_campos">Completa todos los campos</string>
    <string name="completa_telefono">El número de télefono debe tener exactamente 8 dígitos</string>
    <string name="completa_cuenta">El número de cuenta debe tener exactamente 12 dígitos</string>
    <string name="completa_cvc">El CVC debe tener 3 dígitos</string>
    <string name="palabras_obsecenas">El nombre de usuario contiene palabras inapropiadas</string>
    <string name="Registro_titulo_huesped">Registro Huésped</string>
    <string name="Registro_titulo_Anfritrion">Registro Anfitrión</string>
    <string name="Atras">&lt; Atrás</string>

    <string name="formulario">Formulario </string>
    <string name="subir_propiedad">Subir Propiedad </string>
    <string name="aviso_cuantas_fotos_subir">Subir fotos de la casa\n\nNo más de 10 fotos</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="tipo_de_casa">Tipo de Casa</string>
    <string name="cantidad_de_personas">Cantidad de Personas</string>
    <string name="amenidades">Amenidades</string>
    <string name="reglas">Reglas</string>
    <string name="precio_por_noche">Precio por Noche</string>
    <string name="Select_Date_Range">Seleccionar rango de fechas</string>
    <string name="end_date_warning">La fecha de finalización debe ser posterior a la fecha de inicio </string>
    <string name="si">Sí</string>
    <string name="no">No</string>


    <string name="selecciona_las_amenidades">Selecciona las Amenidades de tu propiedad</string>
    <string name="cocina_equipada">Cocina equipada (con electrodomésticos modernos)</string>
    <string name="Aire_acondicionado">Aire acondicionado</string>
    <string name="CalefacciOn">Calefacción</string>
    <string name="wifi">Wi-Fi gratuito</string>
    <string name="tv_o_cable">Televisión por cable o satélite</string>
    <string name="Lavadora_y_secadora">Lavadora y secadora</string>
    <string name="Piscina">Piscina</string>
    <string name="Jardín_o_patio">Jardín o patio</string>
    <string name="Barbacoa_o_parrilla">Barbacoa o parrilla</string>
    <string name="Terraza_o_balcón">Terraza o balcón</string>
    <string name="Gimnasio_en_casa">Gimnasio en casa</string>
    <string name="Garaje">Garaje o espacio de estacionamiento</string>
    <string name="Sistema_de_seguridad">Sistema de seguridad</string>
    <string name="habitaciones_con_bano_en_suite">Habitaciones con baño en suite</string>
    <string name="muebles_de_exterior">Muebles de exterior</string>
    <string name="microondas">Microondas</string>
    <string name="lavavajillas">Lavavajillas</string>
    <string name="cafetera">Cafetera</string>
    <string name="ropa_de_cama_y_toallas_incluidas">Ropa de cama y toallas incluidas</string>
    <string name="acceso_a_areas_comunes">Acceso a áreas comunes (piscina, gimnasio)</string>
    <string name="camas_adicionales_o_sofa_cama">Camas adicionales o sofá cama</string>
    <string name="servicios_de_limpieza_opcionales">Servicios de limpieza opcionales</string>
    <string name="acceso_a_transporte_publico_cercano">Acceso a transporte público cercano</string>
    <string name="cercania_a_tiendas_y_restaurantes">Cercanía a tiendas y restaurantes</string>
    <string name="sistema_de_calefaccion_por_suelo_radiante">Sistema de calefacción por suelo radiante</string>
    <string name="escritorio_o_area_de_trabajo">Escritorio o área de trabajo</string>
    <string name="sistemas_de_entretenimiento">Sistemas de entretenimiento (videojuegos, equipo de música)</string>
    <string name="chimenea">Chimenea</string>
    <string name="acceso_a_internet_de_alta_velocidad">Acceso a internet de alta velocidad</string>

    <string name="aceptan_mascotas"> Mascotas permitidas</string>
    <string name="advertencia_amenidades">Selecciona por lo menos una amenidad</string>
    <string name="advertencia_cantofPeople">La cantidad de personas máxima es 30 y no se puede digitar 0</string>
    <string name="advertencia_precio">El precio debe ser mayor a 0</string>
    <string name="valor_cero">El valor no puede comenzar con 0.</string>
    <string name="no_hay_imagenes">No hay imagenes que ha subido</string>
    <string name="porfavor_selccione_10_imgs">Por favor seleccione entre 1 y 10 imágenes</string>
    <string name="siguiente_imagen">Siguiente Imagen</string>
    <string name="Lista_de_casa">Lista de casas</string>
    
    
    
    
    
    
    
    
    
    <string-array name="house_types">
        <item>Rústica</item>
        <item>Moderna</item>
        <item>Mansion</item>
    </string-array>


    <string-array name="transport_types">
        <item>Carro de cajón</item>
        <item>Sedán</item>
        <item>Buseta</item>
        <item>Moto</item>
    </string-array>

    <string name="app_nam">Configuración</string>
    <string name="configuracion">Configuración</string>
    <string name="ayuda">Ayuda</string>
    <string name="temas">Temas</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>
    <string name="portugues">Portugués</string>
    <string name="frances">Francés</string>
    <string name="hungaro">Húngaro</string>
    <string name="atras">◀ Atrás</string>
    <string name="idiomas">Idiomas</string>
    <string name="selecciona_las_amenidades">Selecciona las Amenidades de tu propiedad</string>
    <string name="cocina_equipada">Cocina equipada (con electrodomésticos modernos)</string>
    <string name="Aire_acondicionado">Aire acondicionado</string>
    <string name="CalefacciOn">Calefacción</string>
    <string name="wifi">Wi-Fi gratuito</string>
    <string name="tv_o_cable">Televisión por cable o satélite</string>
    <string name="Lavadora_y_secadora">Lavadora y secadora</string>
    <string name="Piscina">Piscina</string>
    <string name="Jardín_o_patio">Jardín o patio</string>
    <string name="Barbacoa_o_parrilla">Barbacoa o parrilla</string>
    <string name="Terraza_o_balcón">Terraza o balcón</string>
    <string name="Gimnasio_en_casa">Gimnasio en casa</string>
    <string name="Garaje">Garaje o espacio de estacionamiento</string>
    <string name="Sistema_de_seguridad">Sistema de seguridad</string>
    <string name="habitaciones_con_bano_en_suite">Habitaciones con baño en suite</string>
    <string name="muebles_de_exterior">Muebles de exterior</string>
    <string name="microondas">Microondas</string>
    <string name="lavavajillas">Lavavajillas</string>
    <string name="cafetera">Cafetera</string>
    <string name="ropa_de_cama_y_toallas_incluidas">Ropa de cama y toallas incluidas</string>
    <string name="acceso_a_areas_comunes">Acceso a áreas comunes (piscina, gimnasio)</string>
    <string name="camas_adicionales_o_sofa_cama">Camas adicionales o sofá cama</string>
    <string name="servicios_de_limpieza_opcionales">Servicios de limpieza opcionales</string>
    <string name="acceso_a_transporte_publico_cercano">Acceso a transporte público cercano</string>
    <string name="cercania_a_tiendas_y_restaurantes">Cercanía a tiendas y restaurantes</string>
    <string name="sistema_de_calefaccion_por_suelo_radiante">Sistema de calefacción por suelo radiante</string>
    <string name="escritorio_o_area_de_trabajo">Escritorio o área de trabajo</string>
    <string name="sistemas_de_entretenimiento">Sistemas de entretenimiento (videojuegos, equipo de música)</string>
    <string name="chimenea">Chimenea</string>
    <string name="acceso_a_internet_de_alta_velocidad">Acceso a internet de alta velocidad</string>

    <string name="aceptan_mascotas"> Mascotas permitidas</string>
    <string name="advertencia_amenidades">Selecciona por lo menos una amenidad</string>
    <string name="advertencia_cantofPeople">La cantidad de personas máxima es 30 y no se puede digitar 0</string>
    <string name="advertencia_precio">El precio debe ser mayor a 0</string>
    <string name="valor_cero">El valor no puede comenzar con 0.</string>
    <string name="no_hay_imagenes">No hay imagenes que ha subido</string>
    <string name="porfavor_selccione_10_imgs">Por favor seleccione entre 1 y 10 imágenes</string>
    <string name="siguiente_imagen">Siguiente Imagen</string>
    <string name="Lista_de_casa">Lista de casas</string>


</resources>